# tree-sitter-mermaid

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter-mermaid.wasm  tree-sitter.json
bindings/c/: tree-sitter-mermaid.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: index.js
bindings/python/tree_sitter_mermaid/: __init__.py
bindings/python/tree_sitter_mermaid.egg-info/: PKG-INFO
bindings/rust/: build.rs  lib.rs
docs/: PRODUCTION_READINESS.md  PUBLISHING.md  TESTING.md
prebuilds/darwin-arm64/: tree-sitter-mermaid.node
queries/: highlights.scm
scripts/: parse-snippet
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: flow.txt
