[package]
name = "tree-sitter-mermaid"
description = "Mermaid.js grammar for tree-sitter"
version = "0.25.0"
keywords = ["mermaid", "tree-sitter", "parser", "diagram"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mglst/tree-sitter-mermaid"
edition = "2021"
license = "MIT"
authors = [
  "Mogami Shinichi <monaqa@users.noreply.github.com>",
  "Maximilien Tirard <maximilien.tirard@gmail.com>",
]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25"

[workspace]
