[package]
name = "tree-sitter-mermaid"
description = "Mermaid.js grammar for tree-sitter"
version = "0.25.0"
authors = [
  "Mogami Shinichi <monaqa@users.noreply.github.com>",
  "Mikael Hugo" <https://github.com/mikkihugo>,
  "Maximilien Tirard <maximilien.tirard@gmail.com>",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mermaid"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mglst/tree-sitter-mermaid"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["LICENSE", "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25"
